# neo_kinematics_omnidrive

./: CMakeLists.txt  README.md  package.xml
include/: Matrix.h  OmniKinematics.h  OmniWheel.h  VelocitySolver.h
include/neo_kinematics_omnidrive/: CanMesg.h  DriveModule.h  ElmoMotorCtrl.h  NeoKinematics.h  NeoKinematicsOmniDrive.h  SocketCan.h
launch/: mpo_700_CanCtrl.yaml  mpo_700_Platform.yaml  test_setup.launch  test_setup.yaml  test_simulation_setup.launch
neo_kinematics_omnidrive/: package.xml
neo_kinematics_omnidrive/include/neo_kinematics_omnidrive/: DriveModule.h  DriveParameters.h  ElmoMotorCtrl.h  NeoOmniDriveErrors.h  SocketCan.h
neo_kinematics_omnidrive/launch/: kinematics.launch  mpo_700_CanCtrl.yaml  neo_kinematics_omnidrive.launch
neo_kinematics_omnidrive/src/: DriveModule.cpp  SocketCan.cpp  excitation_node.py  friction_estimation_node.py  identification_node.cpp  neo_kinematics_omnidrive.cpp
neo_kinematics_omnidrive/srv/: MotorSwitch.srv
scripts/: enable_can0.sh  switch_to_socketcan.sh
src/: DriveModule.cpp  ElmoMotorCtrl.cpp  SocketCan.cpp  excitation_node.py  kinematics1.sublime-project  kinematics1.sublime-workspace  neo_kinematics.cpp  neo_kinematics_omnidrive.cpp  neo_kinematics_params_errors.cpp  neo_omnidrive_node.cpp  neo_omnidrive_simulation_node.cpp  neo_omnidrive_socketcan.cpp
srv/: Homing.srv
symbolics/: compile.sh  omni_equations.cpp
test/: test_omni_kinematics.cpp  test_velocity_solver.cpp
